@startuml
skinparam classAttributeIconSize 0

class DiagramModel
{
    +createNode(typeId : NodeTypeId) : CanvasNodeId
    +removeNode(nodeId : CanvasNodeId)

    +connect(a : CanvasConnectorId, b : CanvasConnectorId) : CanvasEdgeId
    +disconnect(edgeId : CanvasEdgeId)

    +addNodeToGroup(node : CanvasNodeId, group : LayoutGroupId)
    +removeNodeFromGroup(node : CanvasNodeId, group : LayoutGroupId)

    +setLayoutEngine(engine : LayoutEngine)

    +layoutAll()
    +layoutNodes(nodes : List<CanvasNodeId>)
}

class Node
{
    id : CanvasNodeId
    typeId : NodeTypeId

    position : Vec2
    size : Vec2

    parentId : CanvasNodeId
    collapsed : bool

    groups : List<LayoutGroupId>

    +setPosition(p : Vec2)
    +setSize(s : Vec2)

    +addConnector(type : ConnectorTypeId) : CanvasConnectorId
}

class Connector
{
    id : CanvasConnectorId
    nodeId : CanvasNodeId
    typeId : ConnectorTypeId

    edges : List<CanvasEdgeId>
}

class Edge
{
    id : CanvasEdgeId
    fromConnector : CanvasConnectorId
    toConnector : CanvasConnectorId
}

class LayoutGroup
{
    id : LayoutGroupId
    nodes : List<CanvasNodeId>
    preserveInternalLayout : bool
}

interface LayoutEngine
{
    +layout(model : DiagramModel)
    +layoutNodes(model : DiagramModel, nodes : List<CanvasNodeId>)
}

class LayoutRules
{
    nodeSpacing : float
    layerSpacing : float
    edgeSpacing : float
    containerPadding : float
}

class GridSettings
{
    enabled : bool
    cellSize : float

    +snap(p : Vec2) : Vec2
}

class ConnectorLogic
{
    +canConnect(model : DiagramModel,
                a : CanvasConnectorId,
                b : CanvasConnectorId) : bool

    +edgeExists(model,a,b) : bool
    +sameNode(model,a,b) : bool
}

class NodeBuilderRegistry
{
    +register(typeId : NodeTypeId, builder)
}

class NodeTypeId
class ConnectorTypeId
class LayoutGroupId

class CanvasNodeId
class CanvasConnectorId
class CanvasEdgeId

class Vec2
{
    x : float
    y : float
}

DiagramModel "1" o-- "*" Node
DiagramModel "1" o-- "*" Edge
DiagramModel "1" o-- "*" LayoutGroup

Node "1" o-- "*" Connector
Edge --> Connector

DiagramModel --> LayoutEngine
DiagramModel --> ConnectorLogic
DiagramModel --> NodeBuilderRegistry
DiagramModel --> GridSettings

LayoutEngine --> LayoutRules

LayoutGroup --> Node

@enduml